--- a/main.css
+++ b/main.css
@@ -1,3 +1,10 @@
-body{
-    width: 50%;
+body {
+    text-align: center;
+    padding: 0;
+    margin: 0;
+}
+
+video{
+    display: block;
+    margin: auto;
 }
